log
Thu 05 Oct 2023 02:52:58 PM UTC: 
 sudoku.c | 20 ++++++++++++++++++++
 1 file changed, 20 insertions(+)
 tests:  0|5
total_score: 0/70
0a250c7
Thu 05 Oct 2023 02:55:50 PM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
ad1ec67
Thu 05 Oct 2023 02:56:19 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
ee06215
Thu 05 Oct 2023 03:01:42 PM UTC: 
 sudoku.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
f8cc65f
Thu 05 Oct 2023 03:03:44 PM UTC: 
 sudoku.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
 tests:  0|5
total_score: 0/70
f5ef80c
Thu 05 Oct 2023 03:04:28 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
3d2504d
Thu 05 Oct 2023 03:05:13 PM UTC: 
 sudoku.c | 22 +++++-----------------
 1 file changed, 5 insertions(+), 17 deletions(-)
test.c: In function ‘get_adj_nodes’:
test.c:245:5: error: ‘main’ is normally a non-static function [-Werror=main]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:262:1: error: expected declaration or statement at end of input
  262 | }
      | ^
test.c:263: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:245:5: error: ‘main’ defined but not used [-Werror=unused-function]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:7:8: error: ‘_strdup’ defined but not used [-Werror=unused-function]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
17202ab
Thu 05 Oct 2023 03:06:00 PM UTC: 
 sudoku.c | 22 ++++++++++++++++++----
 1 file changed, 18 insertions(+), 4 deletions(-)
 tests:  0|5
total_score: 0/70
ffd92db
Thu 05 Oct 2023 03:08:28 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
f4f541c
Thu 05 Oct 2023 03:08:46 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
50cb933
Thu 05 Oct 2023 03:09:11 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
60a1139
Thu 05 Oct 2023 03:09:33 PM UTC: 
 sudoku.c | 10 ++--------
 1 file changed, 2 insertions(+), 8 deletions(-)
 tests:  0|0
9c9bd54
Thu 05 Oct 2023 03:09:52 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
7ed1564
Thu 05 Oct 2023 03:11:30 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
32bea97
Thu 05 Oct 2023 03:14:02 PM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|5
total_score: 0/70
a53ba38
Thu 05 Oct 2023 03:14:53 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
f832a96
Thu 05 Oct 2023 03:17:17 PM UTC: 
 sudoku.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
7557961
Thu 05 Oct 2023 03:19:02 PM UTC: 
 sudoku.c | 9 +++++----
 1 file changed, 5 insertions(+), 4 deletions(-)
 tests:  0|5
total_score: 0/70
3b28106
Thu 05 Oct 2023 03:19:23 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
4cd435d
Thu 05 Oct 2023 03:25:46 PM UTC: 
 sudoku.c | 18 ++++++------------
 1 file changed, 6 insertions(+), 12 deletions(-)
 tests:  2|4
total_score: 15/70
295748e
Thu 05 Oct 2023 05:20:50 PM UTC: 
 sudoku.c | 27 +++++++++++++++++++++++++++
 1 file changed, 27 insertions(+)
 tests:  2|4
total_score: 15/70
7981e94
Thu 05 Oct 2023 05:21:47 PM UTC: 
 sudoku.c | 27 ---------------------------
 1 file changed, 27 deletions(-)
 tests:  2|4
total_score: 15/70
8945a3d
Thu 05 Oct 2023 05:22:35 PM UTC: 
 sudoku.c | 27 +++++++++++++++++++++++++++
 1 file changed, 27 insertions(+)
 tests:  2|4
total_score: 15/70
20bac43
Thu 05 Oct 2023 05:29:52 PM UTC: 
 sudoku.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
 tests:  2|4
total_score: 15/70
cf31696
Thu 05 Oct 2023 05:37:14 PM UTC: 
 sudoku.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
 tests:  2|4
total_score: 15/70
bc85d94
Thu 05 Oct 2023 05:40:18 PM UTC: 
 sudoku.c | 28 ++++++----------------------
 1 file changed, 6 insertions(+), 22 deletions(-)
 tests:  5|3
total_score: 35/70
f1f1ae2
Thu 05 Oct 2023 06:04:30 PM UTC: 
 sudoku.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
 tests:  2|4
total_score: 15/70
bb996f9
Thu 05 Oct 2023 06:04:59 PM UTC: 
 sudoku.c | 16 ----------------
 1 file changed, 16 deletions(-)
 tests:  5|3
total_score: 35/70
353609b
Thu 05 Oct 2023 06:10:34 PM UTC: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  5|3
total_score: 35/70
ff2554f
Thu 05 Oct 2023 06:11:12 PM UTC: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  5|3
total_score: 35/70
fbc7cf0
Thu 05 Oct 2023 06:12:02 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
b510561
Thu 05 Oct 2023 06:22:45 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
4290904
Thu 05 Oct 2023 06:23:12 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
93947e2
Thu 05 Oct 2023 06:28:10 PM UTC: 
 sudoku.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
 tests:  0|5
total_score: 0/70
77746ab
Thu 05 Oct 2023 06:28:47 PM UTC: 
 sudoku.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|5
total_score: 0/70
60c8d45
Thu 05 Oct 2023 06:29:03 PM UTC: 
 sudoku.c | 15 +--------------
 1 file changed, 1 insertion(+), 14 deletions(-)
 tests:  5|3
total_score: 35/70
73fc68c
Thu 05 Oct 2023 06:30:27 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
f0d539b
Thu 05 Oct 2023 10:05:13 PM UTC: 
 sudoku.c | 55 ++++++++++++++++++++++++++++++++++++-------------------
 1 file changed, 36 insertions(+), 19 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:111:16: error: too few arguments to function ‘is_valid’
  111 |             if(is_valid(nuevonodo)){
      |                ^~~~~~~~
sudoku.c:46:5: note: declared here
   46 | int is_valid(Node* n, int k) {
      |     ^~~~~~~~
test.c: In function ‘test_isvalid’:
test.c:112:9: error: too few arguments to function ‘is_valid’
  112 |     if(!is_valid(initial)){
      |         ^~~~~~~~
In file included from test.c:5:
sudoku.c:46:5: note: declared here
   46 | int is_valid(Node* n, int k) {
      |     ^~~~~~~~
test.c:120:8: error: too few arguments to function ‘is_valid’
  120 |     if(is_valid(initial)){
      |        ^~~~~~~~
In file included from test.c:5:
sudoku.c:46:5: note: declared here
   46 | int is_valid(Node* n, int k) {
      |     ^~~~~~~~
test.c:131:8: error: too few arguments to function ‘is_valid’
  131 |     if(is_valid(initial)){
      |        ^~~~~~~~
In file included from test.c:5:
sudoku.c:46:5: note: declared here
   46 | int is_valid(Node* n, int k) {
      |     ^~~~~~~~
test.c:141:8: error: too few arguments to function ‘is_valid’
  141 |     if(is_valid(initial)){
      |        ^~~~~~~~
In file included from test.c:5:
sudoku.c:46:5: note: declared here
   46 | int is_valid(Node* n, int k) {
      |     ^~~~~~~~
test.c: In function ‘test_dfs’:
test.c:213:9: error: too few arguments to function ‘is_valid’
  213 |     if(!is_valid(final)){
      |         ^~~~~~~~
In file included from test.c:5:
sudoku.c:46:5: note: declared here
   46 | int is_valid(Node* n, int k) {
      |     ^~~~~~~~
Compilation failed
c387d27
